--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ DB_PASSWORD="XV3benQPG/JoN9aK"
 # Used in various emails, etc.
 IDENTITY_SITENAME="SUPERXCHANGE"
 
-IDENTITY_LEGALNAME="IXP-SIX"
+IDENTITY_LEGALNAME="SUPERXCHANGE"
 IDENTITY_CITY="Bogor"
 IDENTITY_COUNTRY="Indonesia"
 IDENTITY_ORGNAME="${IDENTITY_LEGALNAME}"
