--- a/.env
+++ b/.env
@@ -59,7 +59,8 @@ IDENTITY_CORPORATE_URL="https://superxchange.net/"
 # The logo to show on the login page. Should be a URL.
 # (the example here works - the leading '//' means the browser should match http/https based on the web page)
 #IDENTITY_BIGLOGO="http://www.ixpmanager.org/images/logos/ixp-manager.png"
-IDENTITY_BIGLOGO="http://www.ixpmanager.org/images/logos/ixp-manager.png"
+IDENTITY_BIGLOGO="https://user-images.githubusercontent.com/65795036/184994229-e1727df7-03f2-4782-913f-1b8e0e2d39e1.png"
+
 
 IDENTITY_DEFAULT_VLAN=1
 
