--- a/.env
+++ b/.env
@@ -4,14 +4,15 @@
 #
 # Initial settings from the installer script on Mon 08 Aug 2022 17:55:22 UTC
 #
-
+APP_ENV=production
 APP_KEY=base64:8vhXimDKNG47PAL6DzGyC497ZJpPpOGem6KoCE6ZnDA=
 
 # set this to false in production:
 APP_DEBUG=false
 
 # Web address - required for sending emails via CLI scripts, etc.
-APP_URL="http://172.22.0.110"
+#APP_URL="http://172.22.0.110"
+APP_URL="https://superxchange.net/"
 
 # See http://php.net/manual/en/timezones.php for a list of timezones:
 APP_TIMEZONE="UTC"
@@ -127,10 +128,10 @@ IXP_FE_FRONTEND_DISABLED_LOGO=false
 ### Graphing - see https://ixp-manager.readthedocs.org/en/latest/features/grapher.html
 
 # Enable the backends you have configured. E.g.:
-# GRAPHER_BACKENDS="mrtg|sflow|smokeping"
+GRAPHER_BACKENDS="mrtg"
 
 # On a new installation, we just use placeholders from the dummy backend:
-GRAPHER_BACKENDS="dummy"
+#GRAPHER_BACKENDS="dummy"
 
 # With the cache enabled, IXP Manager does not have to regenerate / reload / reprocess
 # log / rrd / image files if we have cached them and they are less than 5mins old. This
@@ -146,15 +147,15 @@ GRAPHER_BACKEND_MRTG_DBTYPE="rrd"
 
 # The defaults for these are '/tmp' to require you to change them to something
 # more sensible such as:
-# GRAPHER_BACKEND_MRTG_WORKDIR="/srv/mrtg"
-# GRAPHER_BACKEND_MRTG_LOGDIR="/srv/mrtg"
+GRAPHER_BACKEND_MRTG_WORKDIR="/srv/mrtg"
+GRAPHER_BACKEND_MRTG_LOGDIR="/srv/mrtg"
 
 #################################################################################
 ## Grapher - sflow - see: https://docs.ixpmanager.org/grapher/sflow/
 ##
 
-# GRAPHER_BACKEND_SFLOW_ENABLED=false
-# GRAPHER_BACKEND_SFLOW_ROOT="http://sflow-server.example.com/grapher-sflow"
+#GRAPHER_BACKEND_SFLOW_ENABLED=true
+#GRAPHER_BACKEND_SFLOW_ROOT="http://sflow-server.example.com/grapher-sflow"
 
 
 #################################################################################
@@ -162,10 +163,10 @@ GRAPHER_BACKEND_MRTG_DBTYPE="rrd"
 ##
 
 # Mark it as enabled (this just affects whether certain UI elements are shown):
-# GRAPHER_BACKEND_SMOKEPING_ENABLED=true
+#GRAPHER_BACKEND_SMOKEPING_ENABLED=true
 
 # And set the default location to fetch the Smokeping graphs from:
-# GRAPHER_BACKEND_SMOKEPING_URL="http://www.example.com/smokeping"
+#GRAPHER_BACKEND_SMOKEPING_URL="http://www.example.com/smokeping"
 
 
 
