--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ DB_PASSWORD="XV3benQPG/JoN9aK"
 # documenting where and how each one is spceifically used.
 
 # Used in various emails, etc.
-IDENTITY_SITENAME="SUPERXCHANGE"
+IDENTITY_SITENAME="Super Internet eXchange"
 
 IDENTITY_LEGALNAME="SUPERXCHANGE"
 IDENTITY_CITY="Bogor"
@@ -41,17 +41,17 @@ IDENTITY_ORGNAME="${IDENTITY_LEGALNAME}"
 
 # As well as uses in other places, emails are sent from the following name/email:
 IDENTITY_NAME="${IDENTITY_LEGALNAME}"
-IDENTITY_EMAIL="noc@example.com"
+IDENTITY_EMAIL="hello@superxchange.net"
 
 IDENTITY_TESTEMAIL="${IDENTITY_EMAIL}"
 
 # Used on some traffic graphs:
 IDENTITY_WATERMARK="SUPERXCHANGE"
 IDENTITY_SUPPORT_EMAIL="${IDENTITY_EMAIL}"
-IDENTITY_SUPPORT_PHONE="+555 1 555 1234"
+IDENTITY_SUPPORT_PHONE="+6221 40000 995 ext. 3"
 IDENTITY_SUPPORT_HOURS="24x7"
 IDENTITY_BILLING_EMAIL="${IDENTITY_EMAIL}"
-IDENTITY_BILLING_PHONE="noc@example.com"
+IDENTITY_BILLING_PHONE="hello@superxchange.net"
 IDENTITY_BILLING_HOURS="24x7"
 
 # Web address of your IXP's website. Used in IX-F Export schema, etc.
@@ -116,13 +116,17 @@ IXP_FE_FRONTEND_DISABLED_LOGO=false
 #
 # See config/mail.php abd https://laravel.com/docs/5.5/mail
 #
-# The default setting is 'sendmail' which tries to use your local systems mail client.
-#
+# The default setting is 'sendmail' which tries to use your local systems mail client. https://laravel.com/docs/5.5/mail#
 # MAIL_MAILER="sendmail"
 # MAIL_HOST="localhost"
 # MAIL_PORT=25
 # MAIL_ENCRYPTION="tls"
-
+MAIL_MAILER="smtp"
+MAIL_HOST="mbox.cloudhost.asia"
+MAIL_PORT=25
+MAIL_ENCRYPTION="false"
+MAIL_USERNAME=peering@superxchange.net
+MAIL_PASSWORD=sandiaman2022
 
 #######################################################################################
 ### Graphing - see https://ixp-manager.readthedocs.org/en/latest/features/grapher.html
